# apiserver/openapi_server/controllers/farm_controllers.py
@@ -1,0 +1,30 @@
+def add_farm():
+    pass
+
+
+def add_new_lot():
+    pass
+
+
+def get_farm():
+    pass
+
+
+def record_pick_routine():
+    pass
+
+
+def get_lot():
+    pass
+
+
+def edit_routine():
+    pass
+
+
+def delete_farm():
+    pass
+
+
+def get_egg():
+    pass
